Implement a Makefile for easy compilation and run. Ignore "dumpsim".

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
-Makefile
 cmake_install.cmake
 install_manifest.txt
 CTestTestfile.cmake
@@ -10,3 +9,4 @@ CMakeLists.txt
 .idea/
 assemble
 simulate
+dumpsim
